# orbbec_capture_test

./: .gitignore  CMakeLists.txt  H26xDecoder.cpp  H26xDecoder.h  buffered_channel.h  conanfile.py  main.cpp
vidproc/: hw_decode_example.cpp
vidproc/include/tcn/vpf/: CodecDeducer.h  FFmpegException.h  FrameContainer.h  OpenCodec.h  Rational.h  Types.h
vidproc/include/tcn/vpf/codecs/: Codec.h  H264NVEncCodec.h  H265NVEncCodec.h  VideoCodec.h
vidproc/include/tcn/vpf/demuxing/: StreamData.h
vidproc/include/tcn/vpf/sinks/: FrameSink.h  FrameSinkStream.h  FrameWriter.h  VideoFrameSink.h
vidproc/include/tcn/vpf/sources/: RawVideoDataSource.h
vidproc/src/: CodecDeducer.cpp  FFmpegException.cpp  FrameContainer.cpp  OpenCodec.cpp  Rational.cpp
vidproc/src/codecs/: Codec.cpp  H264NVEncCodec.cpp  H265NVEncCodec.cpp  VideoCodec.cpp
vidproc/src/sinks/: FrameSinkStream.cpp
vidproc/src/sources/: RawVideoDataSource.cpp
